# tauri-sycamore

./: .gitignore  .taurignore  Cargo.toml  README.md  Trunk.toml  makefile  makefile.vars.mk
client/: Cargo.toml  index.html
client/css/: styles.css  ui.css
client/src/: app.rs
system/: Cargo.toml  tauri.conf.json
system/capabilities/: main.json
system/capabilities/schemas/: capabilities.json  plugin-manifests.json  windows-schema.json
system/src/: main.rs
