[package]
name        = "tauri-sycamore-ui"
version     = "0.0.0"
description = "sycamore client" 
authors.workspace       = true
license.workspace       = true
repository.workspace    = true
edition.workspace       = true
rust-version.workspace  = true

[lints]
workspace = true

[dependencies]
js-sys = "0.3"
futures-util = "0.3"

serde-wasm-bindgen = "0.6.3"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4"

serde       = { workspace = true, features = ["derive"] }
sycamore    = { workspace = true, features = ["suspense"] }

tauri-wasm  = { git = "https://github.com/p1mo/tauri-wasm", branch = "dev", features = [ "all", "plugin-all" ] }