[package]
name        = "tauri-sycamore"
version     = "0.0.0"
description = "tauri v2" 
authors.workspace       = true
license.workspace       = true
repository.workspace    = true
edition.workspace       = true
rust-version.workspace  = true

[build-dependencies]
tauri-build = { version = "2.0.0-alpha", features = [] }

[dependencies]
tauri = { version = "2.0.0-alpha", features = [] }
tauri-plugin-shell  = "2.0.0-alpha"
tauri-plugin-os     = "2.0.0-alpha"
tauri-plugin-fs     = "2.0.0-alpha"

serde.workspace = true
serde_json.workspace = true

[features]
custom-protocol = ["tauri/custom-protocol"]
