[package]
name = "tauri-sycamore"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lints]
workspace = true

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = [] }

#tauri-plugin-authenticator  = "2.0.0-beta.0"
#tauri-plugin-autostart  = "2.0.0-beta.0"
#tauri-plugin-barcode-scanner  = "2.0.0-beta.0"
#tauri-plugin-biometric  = "2.0.0-beta.0"
tauri-plugin-cli  = "2.0.0-beta"
#tauri-plugin-clipboard-manager  = "2.0.0-beta.0"
#tauri-plugin-deep-link  = "2.0.0-beta.0"
#tauri-plugin-dialog  = "2.0.0-beta.0"
tauri-plugin-fs  = "2.0.0-beta"
#tauri-plugin-global-shortcut  = "2.0.0-beta.0"
#tauri-plugin-http  = "2.0.0-beta.0"
tauri-plugin-log  = "2.0.0-beta"
#tauri-plugin-nfc  = "2.0.0-beta.0"
#tauri-plugin-notification     = "2.0.0-beta.0"
tauri-plugin-os     = "2.0.0-beta"
#tauri-plugin-positioner = "2.0.0-beta.0"
tauri-plugin-process = "2.0.0-beta"
tauri-plugin-shell = "2.0.0-beta"
#tauri-plugin-sql = { version = "2.0.0-beta.0", features = [ "sqlite" ] }
#tauri-plugin-store = "2.0.0-beta.0"
#tauri-plugin-stronghold = "2.0.0-beta.0"
#tauri-plugin-updater = "2.0.0-beta.0"
#tauri-plugin-upload = "2.0.0-beta.0"
#tauri-plugin-websocket = "2.0.0-beta.0"
#tauri-plugin-window-state = "2.0.0-beta.0"

serde.workspace = true
serde_json.workspace = true


[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
